# book-audio-filter

./: .clauderules.txt  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  PROJECT.md  README.md  ROADMAP.md  pyproject.toml  pytest.ini  requirements.txt  Динамический порог.txt  Скилл_v2.md
.claude/: settings.local.json
models/: meta.json
Документация/: ACOUSTIC_AUDIT_ANALYSIS.md  AUDIT_REPORT_v12.6.md  TODO_AUDIT_v12.6.md  ПЛАН_ИТЕРАЦИЙ_v12.md  ПЛАН_ТЕСТИРОВАНИЯ_SMARTFILTER.md  ПЛАН_УЛУЧШЕНИЯ_FP.md
Инструменты/: __init__.py  alignment_manager.py  analyze_false_positives.py  audio_converter.py  batch_pipeline.py  batch_process_transcripts.py  batch_refilter_v6.py  batch_transcribe_from_bucket.py  cache_manager.py  collect_all_errors.py  config.py  db_schema_v2.py  docx_export.py  error_context.py  error_normalizer.py  false_positives_db.py  false_positives_tracker.py  golden_filter.py  ml_classifier.py  morphology.py  pipeline.py  populate_db.py  populate_db_v3.py  process_new_chapter.py  proper_names_extractor.py  rebuild_smart_data.py  smart_compare.py  text_normalizer.py  training_data_false_positives.json  training_data_full.json  transcribe.py  transcription_provider.py  turboscribe_compare.py  turboscribe_merger.py  unify_formats.py  version.py  version_table.py  web_viewer.py  web_viewer_flask.py  КЛЮЧ ЯНДЕКС АПИ.docx
Оригинал/: ~$Глава2.docx
Результаты проверки/: batch_summary_20260125_1851.json  batch_summary_20260125_1910.json  batch_summary_20260125_2016.json  batch_summary_20260125_2018.json  false_positives_analysis_20260125.json  Глава2_filtered.json
Словари/: config.json  false_positives.db  false_positives_tracker.json  Словарь_имён_персонажей.txt  защищенные_слова.txt  ошибки_чтеца.json
Тесты/: FINAL_ANALYSIS_REPORT.md  conftest.py  experiment_filters.py  filter_analysis.py  golden_test_history.json  run_full_test.py  test_config.py  test_filter_accuracy.py  test_filters_package.py  test_golden_filter_unit.py  (+22 more)
(+431 files in other folders)
